align fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -308,7 +308,7 @@ ol {
   }
 
   .header {
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 2fr 0.5fr;
     /* Creates three columns */
 
   }
